[package]
name = "auto-args-derive"
version = "0.1.5"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"
description = "Parse command line arguments by defining a struct, derive crate."
repository = "https://github.com/daveroundy/auto-args"
keywords = ["args", "derive"]
categories = ["command-line-interface"]
license = "Apache-2.0/MIT"

[dependencies]
syn = "2.0.104"
quote = "1.0.40"
proc-macro2 = "1.0.95"

[lib]
proc-macro = true
